--- a/src/main/resources/assets/gellertmod/lang/en_us.json
+++ b/src/main/resources/assets/gellertmod/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.gellertmod.gemstone": "Gemstone",
   "item.gellertmod.candle": "Candle",
   "item.gellertmod.lit_candle": "Lit Candle",
+  "item.gellertmod.purple_wax": "Purple Wax",
+  "item.gellertmod.purple_honey": "Purple Honey",
   "itemGroup.gellerttab": "Gellert's Mod",
   "block.gellertmod.candle_block": "Block of Candle",
   "block.gellertmod.experience_block": "Block of Experience"
