Implemented a single purpose item with advanced functionality

--- a/src/main/resources/assets/gellertmod/lang/en_us.json
+++ b/src/main/resources/assets/gellertmod/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.gellertmod.lit_candle": "Lit Candle",
   "item.gellertmod.purple_wax": "Purple Wax",
   "item.gellertmod.purple_honey": "Purple Honey",
+  "item.gellertmod.eight_ball": "Eight Ball",
   "itemGroup.gellerttab": "Gellert's Mod",
   "block.gellertmod.candle_block": "Block of Candle",
   "block.gellertmod.experience_block": "Block of Experience"
