Given a new lightning block with hidden onClick features

--- a/src/main/resources/assets/gellertmod/lang/en_us.json
+++ b/src/main/resources/assets/gellertmod/lang/en_us.json
@@ -7,5 +7,6 @@
   "item.gellertmod.eight_ball": "Eight Ball",
   "itemGroup.gellerttab": "Gellert's Mod",
   "block.gellertmod.candle_block": "Block of Candle",
-  "block.gellertmod.experience_block": "Block of Experience"
+  "block.gellertmod.experience_block": "Block of Experience",
+  "block.gellertmod.jumpy_block": "Jumpy Block"
 }
