--- a/src/main/resources/assets/gellertmod/lang/en_us.json
+++ b/src/main/resources/assets/gellertmod/lang/en_us.json
@@ -8,5 +8,6 @@
   "itemGroup.gellerttab": "Gellert's Mod",
   "block.gellertmod.candle_block": "Block of Candle",
   "block.gellertmod.experience_block": "Block of Experience",
-  "block.gellertmod.jumpy_block": "Jumpy Block"
+  "block.gellertmod.jumpy_block": "Jumpy Block",
+  "block.gellertmod.candle_glass": "Candle Glass"
 }
