--- a/src/main/resources/assets/gellertmod/lang/en_us.json
+++ b/src/main/resources/assets/gellertmod/lang/en_us.json
@@ -5,9 +5,12 @@
   "item.gellertmod.purple_wax": "Purple Wax",
   "item.gellertmod.purple_honey": "Purple Honey",
   "item.gellertmod.eight_ball": "Eight Ball",
+  "item.gellertmod.millet": "Millet",
+  "item.gellertmod.millet_seeds": "Millet Seeds",
   "itemGroup.gellerttab": "Gellert's Mod",
   "block.gellertmod.candle_block": "Block of Candle",
   "block.gellertmod.experience_block": "Block of Experience",
   "block.gellertmod.jumpy_block": "Jumpy Block",
-  "block.gellertmod.candle_glass": "Candle Glass"
+  "block.gellertmod.candle_glass": "Candle Glass",
+  "block.gellertmod.millet_crop": "Millet Crop"
 }
